--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
 			   </div> <!-- end bgrid -->
 
-			   <div class="bgrid team-item animate-this">
+			   <!-- <div class="bgrid team-item animate-this">
 
    		            <div class="team-author">
 						<div class="img-class">
@@ -327,7 +327,7 @@
                     	</div>
                   </div>         	               
 
-			   </div> <!-- end bgrid -->
+			   </div> --> <!-- end bgrid -->
 
 
 
@@ -637,17 +637,22 @@
    			<h1>Get In Touch.</h1>
 
    			<p class="lead">We are excited to grow and build our product. Send us a message if you're interested in hearing more, being a beta tester, or just want to give some encouragement.</p>
+   			<h3>Email Us At</h6>
+	   			<p class="lead">
+	   				praxis@gmail.com<br>
+				   	<!-- info@praxis.com			      -->
+				</p>
    		</div> 
    	</div> <!-- end section-intro -->
 
-   	<div class="row contact-content">
+<!--    	<div class="row contact-content">
 
    		<div class="col-seven tab-full animate-this">
 
-   			<h5>Send Us A Message</h5>
+   			<h5>Send Us A Message</h5> -->
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post">     			
+   <!--          <form name="contactForm" id="contactForm" method="post">     			
 
                <div class="form-field">
  					   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
@@ -683,21 +688,21 @@
 						</div>
                </div>
 
-      		</form> <!-- end form -->
+      		</form> --><!-- end form -->
 
             <!-- contact-warning -->
-            <div id="message-warning"></div> 
-
+<!--             <div id="message-warning"></div> 
+ -->
             <!-- contact-success -->
-      		<div id="message-success">
+<!--       		<div id="message-success">
                <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
+      		</div> -->
 
-         </div> <!-- end col-seven --> 
+         <!-- </div>  --> --><!-- end col-seven --> 
 
-         <div class="col-four tab-full contact-info end animate-this">
+         <!-- <div class="contact-info end animate-this"> -->
 
-         	<h5>Contact Information</h5>
+         	<!-- <h5>Contact Information</h5> -->
 
          	<!-- <div class="cinfo">
 	   			<h6>Where to Find Us</h6>
@@ -708,13 +713,12 @@
 	            </p>
 	   		</div> --> <!-- end cinfo -->
 
-	   		<div class="cinfo">
+	   		<!-- <div class="cinfo">
 	   			<h6>Email Us At</h6>
 	   			<p>
 	   				praxis@gmail.com<br>
-				   	<!-- info@praxis.com			      -->
 				   </p>
-	   		</div> <!-- end cinfo -->
+	   		</div> --> <!-- end cinfo -->
 
 	   		<!-- <div class="cinfo">
 	   			<h6>Call Us At</h6>
@@ -725,9 +729,9 @@
 				   </p>
 	   		</div> -->
 
-         </div> <!-- end cinfo --> 
+         <!-- </div> end cinfo  -->
 
-   	</div> <!-- end row contact-content -->
+   	<!-- </div> end row contact-content -->
 		
 	</section> <!-- end contact -->
 
