--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 	   				<!-- <h1 class="animate-this"><span>praxis</span> aims to increase empathy and decrease bias through research-backed VR experiences. </h1> -->
 	   				<!-- <h2 class="animate-this">We pair immersive technology that exposes the experience of discrimination with engaging bias training to create sustainable change for individuals and organizations. </h2>	 -->
 	   			<p class="leadbold"><span>praxis</span> aims to increase empathy and decrease bias through research-backed VR experiences. </p>
-	   			<p class ="lead">We pair immersive technology that exposes the experience of discrimination with engaging bias training to create sustainable change for individuals and organizations.</p>
+	   			<p class ="leadregular"> Research has shown that VR has the power to expose the experience of discrimination and increase empathy. We pair immersive technology with engaging bias training to create sustainable change for individuals and organizations.  </p>
 				</div>   
 
    		</div> <!-- end col-full  -->
@@ -248,9 +248,7 @@
                     	<div class="author-info">
                     		Elise Smith
 		                  <p>
-		                  Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-		                  to do what you believe is great work. And the only way to do great work is to love what you do.
-		                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+		                  Elise is a joint MBA/Masters in Education. She has led B2B business development for IBM Watson and has developed bias trainings. She is inspired by praxis because it’s an opportunity to better address the racial discrimination her family has experienced in the workplace.
 		                  </p>         	 
                     	</div>
                   </div>     
@@ -266,10 +264,9 @@
                     	<div class="author-info">
                     		Demi Horvat
 		                  <p>
-		                  Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-		                  to do what you believe is great work. And the only way to do great work is to love what you do.
-		                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-		                  </p>         	 
+		                  Demi is a first year MBA with experience at Walmart and BCG. Personally, she cares about this topic because, as a biracial woman who appears white, she benefits from and understands the privilege of inclusion that others do not have.
+		
+						</p>         	 
                     	</div>
                   </div>                     
 
@@ -284,9 +281,7 @@
                        <div class="author-info">
                     		Heather Shen
 		                  <p>
-		                  Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-		                  to do what you believe is great work. And the only way to do great work is to love what you do.
-		                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
+		                 Heather is a master’s student in Electrical Engineering. She’s helped design an Augmented Reality headset and has seen how advances in hardware make VR more accessible. On a more personal note, she is passionate about praxis because having been the only woman on an engineering team, she knows we need more training on gender bias.
 		                  </p>         	 
                     	</div>
                   </div>         	               
@@ -302,10 +297,7 @@
                        <div class="author-info">
                     		Melina Lopez
 		                  <p>
-		                  Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-		                  to do what you believe is great work. And the only way to do great work is to love what you do.
-		                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-		                  </p>         	 
+		                  Melina is a junior in Product Design and minor in CS. She works at Stanford’s Virtual Human Interaction Lab doing 3D modeling and coding. She believes praxis is needed because she has personally seen Latinas discriminated against in the workplace and has had to escalate bias incidents on my past teams. 		                  </p>         	 
                     	</div>
                   </div>         	               
 
