--- a/index.html
+++ b/index.html
@@ -637,14 +637,14 @@
    		</div> 
    	</div> <!-- end section-intro -->
 
-<!--    	<div class="row contact-content">
+   	<div class="row contact-content">
 
    		<div class="col-seven tab-full animate-this">
 
-   			<h5>Send Us A Message</h5> -->
+   			<h5>Send Us A Message</h5>
 
             <!-- form -->
-   <!--          <form name="contactForm" id="contactForm" method="post">     			
+            <form name="contactForm" id="contactForm" method="post" action="contact.php">     			
 
                <div class="form-field">
  					   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
@@ -680,17 +680,17 @@
 						</div>
                </div>
 
-      		</form> --><!-- end form -->
+      		</form> <!-- end form-->
 
             <!-- contact-warning -->
-<!--             <div id="message-warning"></div> 
- -->
-            <!-- contact-success -->
-<!--       		<div id="message-success">
-               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div> -->
+            <div id="message-warning"></div> 
 
-         <!-- </div>  --> --><!-- end col-seven --> 
+            <!-- contact-success -->
+      		<div id="message-success">
+               <i class="fa fa-check"></i>Your message was sent, thank you!<br>
+      		</div>
+
+         </div>  <!-- end col-seven --> 
 
          <!-- <div class="contact-info end animate-this"> -->
 
