--- a/index.html
+++ b/index.html
@@ -61,13 +61,7 @@
 				<li><a class="smoothscroll" href="#team" title="">Team</a></li>
 				<!-- <li><a class="smoothscroll" href="#portfolio" title="">Works</a></li> -->
 				<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>						
-			</ul>	
-
-<!-- 			<p class="sponsor-text">
-				Looking for an awesome and reliable webhosting? Try <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT">DreamHost</a>.
-				Get <span>$50 off</span> when you sign up with the promocode <span>styleshout</span>.  -->
-				<!-- Simply type	the promocode in the box labeled “Promo Code” when placing your order. -->
-			</p>			
+			</ul>			
 
 			<!-- <ul class="header-social-list">
 	         <li>
@@ -146,9 +140,6 @@
 
 				<div class="intro">
 					<h3 class="animate-this">About Us</h3>
-					<!-- <h2>praxis is the process by which theory <br>is enacted, practiced, and realized. </h2> -->
-	   				<!-- <h1 class="animate-this"><span>praxis</span> aims to increase empathy and decrease bias through research-backed VR experiences. </h1> -->
-	   				<!-- <h2 class="animate-this">We pair immersive technology that exposes the experience of discrimination with engaging bias training to create sustainable change for individuals and organizations. </h2>	 -->
 	   			<p class="leadbold"><span>praxis</span> aims to increase empathy and decrease bias through research-backed VR experiences. </p>
 	   			<p class ="leadregular"> Research has shown that VR has the power to expose the experience of discrimination and increase empathy. We pair immersive technology with engaging bias training to create sustainable change for individuals and organizations.  </p>
 				</div>   
@@ -302,26 +293,6 @@
                   </div>         	               
 
 			   </div> <!-- end bgrid -->
-
-			   <!-- <div class="bgrid team-item animate-this">
-
-   		            <div class="team-author">
-						<div class="img-class">
-                    	 	<img src="images/avatars/hope.jpeg" alt="Author image"> 
-                    	</div>
-                       <div class="author-info">
-                    		Hope Bellamy Shroeder
-		                  <p>
-		                  Your work is going to fill a large part of your life, and the only way to be truly satisfied is
-		                  to do what you believe is great work. And the only way to do great work is to love what you do.
-		                  If you haven't found it yet, keep looking. Don't settle. As with all matters of the heart, you'll know when you find it.
-		                  </p>         	 
-                    	</div>
-                  </div>         	               
-
-			   </div> --> <!-- end bgrid -->
-
-
 
 	      </div> <!-- end services-list -->
    		
@@ -629,11 +600,10 @@
    			<h1>Get In Touch.</h1>
 
    			<p class="lead">We are excited to grow and build our product. Send us a message if you're interested in hearing more, being a beta tester, or just want to give some encouragement.</p>
-   			<h3>Email Us At</h6>
+<!--    			<h3>Email Us At</h6>
 	   			<p class="lead">
 	   				praxis@gmail.com<br>
-				   	<!-- info@praxis.com			      -->
-				</p>
+				</p> -->
    		</div> 
    	</div> <!-- end section-intro -->
 
@@ -644,7 +614,7 @@
    			<h5>Send Us A Message</h5>
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="contact.php">     			
+            <form name="contactForm" id="contactForm" method="post">     	<!-- method="post"	action="contact.php" -->	
 
                <div class="form-field">
  					   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
@@ -668,6 +638,7 @@
 	            </div> 
 
                <div class="form-field">
+               	<!-- <button type="submit">Submit</button> -->
                   <button class="submitform">Submit</button>
 
                   <div id="submit-loader">
