--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
    			<h5>Send Us A Message</h5>
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post">     	<!-- method="post"	action="contact.php" -->	
+            <form name="contactForm" id="contactForm" method="post">     	
 
                <div class="form-field">
  					   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
@@ -638,7 +638,6 @@
 	            </div> 
 
                <div class="form-field">
-               	<!-- <button type="submit">Submit</button> -->
                   <button class="submitform">Submit</button>
 
                   <div id="submit-loader">
