--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
    			<h5>Send Us A Message</h5>
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" >     	
+            <form name="contactForm" id="contactForm" method="post">     	
 
                <div class="form-field">
  					   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
