--- a/index.html
+++ b/index.html
@@ -638,16 +638,16 @@
 	            </div> 
 
                <div class="form-field">
-                  <button class="submitform">Submit</button>
-
-                  <div id="submit-loader">
+                  <!-- <button class="submitform">Submit</button> -->
+                  <input type="submit" value = "Submit" >
+<!--                   <div id="submit-loader">
                      <div class="text-loader">Sending...</div>                             
        			      <div class="s-loader">
 							  	<div class="bounce1"></div>
 							  	<div class="bounce2"></div>
 							  	<div class="bounce3"></div>
 							</div>
-						</div>
+						</div> -->
                </div>
 
       		</form> <!-- end form-->
