start from scratch form

--- a/index.html
+++ b/index.html
@@ -614,7 +614,17 @@
    			<h5>Send Us A Message</h5>
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post">     	
+            <form method="POST" action="https://formspree.io/heathercshen@gmail.com">
+            	
+			  <input type="text" name ="name" placeholder="Your name">
+			  <input type="email" name="email" placeholder="Your email">
+			  <textarea name="message" placeholder="Message"></textarea>
+			  <button type="submit">Send Test</button>
+			</form>	
+
+
+
+<!--             <form name="contactForm" id="contactForm" method="get">     	
 
                <div class="form-field">
  					   <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
@@ -638,27 +648,26 @@
 	            </div> 
 
                <div class="form-field">
-                  <!-- <button class="submitform">Submit</button> -->
-                  <input type="submit" value = "Submit" >
-<!--                   <div id="submit-loader">
+                  <button class="submitform">Submit</button>
+                  <div id="submit-loader">
                      <div class="text-loader">Sending...</div>                             
        			      <div class="s-loader">
 							  	<div class="bounce1"></div>
 							  	<div class="bounce2"></div>
 							  	<div class="bounce3"></div>
 							</div>
-						</div> -->
+						</div>
                </div>
 
-      		</form> <!-- end form-->
+      		</form> --> <!-- end form-->
 
             <!-- contact-warning -->
-            <div id="message-warning"></div> 
+            <!-- <div id="message-warning"></div>  -->
 
             <!-- contact-success -->
-      		<div id="message-success">
+<!--       		<div id="message-success">
                <i class="fa fa-check"></i>Your message was sent, thank you!<br>
-      		</div>
+      		</div> -->
 
          </div>  <!-- end col-seven --> 
 
