start from scratch form

--- a/index.html
+++ b/index.html
@@ -615,11 +615,11 @@
 
             <!-- form -->
             <form method="POST" action="https://formspree.io/heathercshen@gmail.com">
-            	
+
 			  <input type="text" name ="name" placeholder="Your name">
 			  <input type="email" name="email" placeholder="Your email">
 			  <textarea name="message" placeholder="Message"></textarea>
-			  <button type="submit">Send Test</button>
+			  <button type="submit">Submit</button>
 			</form>	
 
 
