start from scratch form

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
 
    	<div class="row contact-content">
 
-   		<div class="col-seven tab-full animate-this">
+   		<div class="tab-full animate-this">
 
    			<h5>Send Us A Message</h5>
 
