Updated website bios

--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
                     	<div class="author-info">
                     		Elise Smith
 		                  <p>
-		                  Elise is a joint MBA/Masters in Education. She has led B2B business development for IBM Watson and has developed bias trainings. She is inspired by praxis because it’s an opportunity to better address the racial discrimination her family has experienced in the workplace.
+		                  Elise is a Stanford joint degree student pursuing an MBA & MA in Education. She has developed early iterations of Watson for Education products, and led B2B business development IBM Watson. Elise has also been a funder at philanthropic venture fund where she invested in diversity & inclusion strategies and developed unconscious bias trainings.
+
 		                  </p>         	 
                     	</div>
                   </div>     
@@ -255,7 +256,7 @@
                     	<div class="author-info">
                     		Demi Horvat
 		                  <p>
-		                  Demi is a first year MBA with experience at Walmart and BCG. Personally, she cares about this topic because, as a biracial woman who appears white, she benefits from and understands the privilege of inclusion that others do not have.
+		                  Demi is a Stanford MBA candidate. She was a consultant for several years at the Boston Consulting Group in NYC focused on consumer and technology.  Demi also has management experience: she managed a $50M P&L and team of five as a category lead at Jet.com and Walmart eCommerce.
 		
 						</p>         	 
                     	</div>
@@ -272,7 +273,8 @@
                        <div class="author-info">
                     		Heather Shen
 		                  <p>
-		                 Heather is a master’s student in Electrical Engineering. She’s helped design an Augmented Reality headset and has seen how advances in hardware make VR more accessible. On a more personal note, she is passionate about praxis because having been the only woman on an engineering team, she knows we need more training on gender bias.
+		                 Heather is an Electrical Engineering Masters candidate at Stanford. She has previously worked at NASA on computer and synthetic vision, and also designed AR/VR hardware for the Hololens headset team at Microsoft. Last summer, she also worked at Bain, integrating her passion for technology with project management and strategy.
+
 		                  </p>         	 
                     	</div>
                   </div>         	               
@@ -288,7 +290,8 @@
                        <div class="author-info">
                     		Melina Lopez
 		                  <p>
-		                  Melina is a junior in Product Design and minor in CS. She works at Stanford’s Virtual Human Interaction Lab doing 3D modeling and coding. She believes praxis is needed because she has personally seen Latinas discriminated against in the workplace and has had to escalate bias incidents on my past teams. 		                  </p>         	 
+		                  Melina is majoring in Product Design with a minor in Computer Science at Stanford. She is an experienced AR/VR developer and codes 3D models and experiences at the Stanford Virtual Human Interaction Lab. Melina founded the Stanford SIGGRAPH chapter for computer graphics and interactive techniques, and is also an artist, which informs her code and design work.
+	                  </p>         	 
                     	</div>
                   </div>         	               
 
@@ -609,7 +612,7 @@
 
    	<div class="row contact-content">
 
-   		<div class="tab-full animate-this">
+   		<div class="col-seven tab-full animate-this">
 
    			<h5>Send Us A Message</h5>
 
