--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     	<div class="author-info">
                     		Elise Smith
 		                  <p>
-		                  Elise is a Stanford joint degree student pursuing an MBA & MA in Education. She has developed early iterations of Watson for Education products, and led B2B business development IBM Watson. Elise has also been a funder at philanthropic venture fund where she invested in diversity & inclusion strategies and developed unconscious bias trainings.
+		                  Elise is a Stanford joint degree student pursuing an MBA & MA in Education. She has developed early iterations of Watson for Education products, and led B2B business development at IBM Watson. Elise has also been a funder at a philanthropic venture fund where she invested in entrepreneurs advancing D&I, diversity & inclusion strategies and developed unconscious bias trainings.
 
 		                  </p>         	 
                     	</div>
