fixed typo in bios

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-	<link rel="icon" href="favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="logo.png" type="image/x-icon">
+	<link rel="icon" href="logo.png" type="image/x-icon">
 
 </head>
 
@@ -239,7 +239,7 @@
                     	<div class="author-info">
                     		Elise Smith
 		                  <p>
-		                  Elise is a Stanford joint degree student pursuing an MBA & MA in Education. She has developed early iterations of Watson for Education products, and led B2B business development at IBM Watson. Elise has also been a funder at a philanthropic venture fund where she invested in entrepreneurs advancing D&I, diversity & inclusion strategies and developed unconscious bias trainings.
+		                  Elise is a Stanford joint degree student pursuing an MBA & MA in Education. She has developed early iterations of Watson for Education products, and led B2B business development at IBM Watson. Elise has also been a funder at a philanthropic venture fund where she invested in entrepreneurs advancing diversity & inclusion strategies and developed unconscious bias trainings.
 
 		                  </p>         	 
                     	</div>
@@ -273,7 +273,7 @@
                        <div class="author-info">
                     		Heather Shen
 		                  <p>
-		                 Heather is an Electrical Engineering Masters candidate at Stanford. She has previously worked at NASA on computer and synthetic vision, and also designed AR/VR hardware for the Hololens headset team at Microsoft. Last summer, she also worked at Bain, integrating her passion for technology with project management and strategy.
+		                 Heather is an Electrical Engineering Masters candidate at Stanford. She has previously worked at NASA on computer and synthetic vision, and also designed AR hardware for the Hololens headset team at Microsoft. Last summer, she also worked at Bain, integrating her passion for technology with project management and strategy.
 
 		                  </p>         	 
                     	</div>
@@ -290,7 +290,7 @@
                        <div class="author-info">
                     		Melina Lopez
 		                  <p>
-		                  Melina is majoring in Product Design with a minor in Computer Science at Stanford. She is an experienced AR/VR developer and codes 3D models and experiences at the Stanford Virtual Human Interaction Lab. Melina founded the Stanford SIGGRAPH chapter for computer graphics and interactive techniques, and is also an artist, which informs her code and design work.
+		                  Melina is majoring in Product Design with a minor in Computer Science at Stanford. She is an experienced VR developer and codes 3D models and experiences at the Stanford Virtual Human Interaction Lab. Melina founded the Stanford SIGGRAPH chapter for computer graphics and interactive techniques, and is also an artist, which informs her code and design work.
 	                  </p>         	 
                     	</div>
                   </div>         	               
