--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                   Praxis was recognized by a group of Venture Capitalists and Investors in the Coalition of Black Excellence (CBE) Pitch Day for our novel and exciting idea to revolutionize education spaces. 
                   </p> 
 					<div class="img-class">
-                    	 	<img src="images/press/CBE.jpg" alt="CBE image"> 
+                    	 	<img src="images/press/CBE.jpeg" alt="CBE image"> 
                 	</div>
                   <div class="testimonial-author">
                   		
