rephrased certain sections

--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 
 				<div class="intro">
 					<h3 class="animate-this">About Us</h3>
-	   			<p class="leadbold"><span>praxis</span> aims to increase empathy and decrease bias through research-backed VR experiences. </p>
-	   			<p class ="leadregular"> Research has shown that VR has the power to expose the experience of discrimination and increase empathy. We pair immersive technology with engaging bias training to create sustainable change for individuals and organizations.  </p>
+	   			<p class="leadbold"><span>praxis</span> increases diversity and inclusion outcomes through research-backed VR learning experiences. </p>
+	   			<p class ="leadregular"> Research has shown that first person perspective-taking in VR can increase empathy, reduce bias, and encourage the adoption of more inclusive behaviors. We're reimagining diversity and inclusion trainings to create sustainable change for individuals and organizations.  </p>
 				</div>   
 
    		</div> <!-- end col-full  -->
@@ -224,7 +224,7 @@
    	<div class="row">
    		<div class="col-twelve">
    			<h2 class="animate-this">Who We Are.</h2>
-   			<p class="lead">We are a group of creative designers, experienced developers, and passionate leaders. We have experience in research, experience production, curriculum creation, and business development.</p>
+   			<p class="lead">We care deeply about helping organizations become more diverse, equitable, and inclusive. We have experience in diversity and inclusion research and strategies, VR development, curriculum creation, and machine learning.</p>
    		</div>   		
    	</div>   	
    	<div class="row team-content">
@@ -246,23 +246,6 @@
                   </div>     
 
 				</div> <!-- end bgrid -->
-
-				<div class="bgrid team-item animate-this">	
-
-		            <div class="team-author">
-                    	<div class="img-class">
-                    	 	<img src="images/avatars/demi.jpeg" alt="Author image"> 
-                    	</div>
-                    	<div class="author-info">
-                    		Demi Horvat
-		                  <p>
-		                  Demi is a Stanford MBA candidate. She was a consultant for several years at the Boston Consulting Group in NYC focused on consumer and technology.  Demi also has management experience: she managed a $50M P&L and team of five as a category lead at Jet.com and Walmart eCommerce.
-		
-						</p>         	 
-                    	</div>
-                  </div>                     
-
-			   </div> <!-- end bgrid -->
 
 			   <div class="bgrid team-item animate-this">
 
@@ -323,7 +306,7 @@
 
                <li>
                   <p>
-                  Praxis was recognized by a group of Venture Capitalists and Investors in the Coalition of Black Excellence (CBE) Pitch Day for our novel and exciting idea to revolutionize education spaces. 
+                  Praxis was recognized by a group of Venture Capitalists and Investors in the Coalition of Black Excellence (CBE) Pitch Day for our exciting idea to revolutionize corporate D&I trainings. 
                   </p> 
 					<div class="img-class">
                     	 <img src="images/press/CBE.jpeg" alt="CBE image"> 
@@ -338,7 +321,7 @@
 
                <li>
                   <p>
-                  Praxis was selected to pitch at the New Voices Presents Black Women Talk Tech Pitch Black in New York City. Of 100 applicants, we were recognized for second place and received feedback from expert judges, entrepreneurs, and investors. 
+                  Praxis was selected to pitch at the New Voices Presents Black Women Talk Tech Pitch Black in New York City. Of over 100 applicants, we tied for second place and received feedback from expert judges, entrepreneurs, and investors. 
                   </p>
 					<div class="img-class">
                     	<img src="images/press/BWTT.jpeg" alt="BWTT image">
@@ -396,9 +379,9 @@
 		<div class="row narrow section-intro with-bottom-sep animate-this">
    		<div class="col-twelve">
    			<h3>Contact</h3>
-   			<h1>Get In Touch.</h1>
+   			<h1>want to work with us?</h1>
 
-   			<p class="lead">We are excited to grow and build our product. Send us a message if you're interested in hearing more, being a beta tester, or just want to give some encouragement.</p>
+   			<p class="lead">We're currently piloting with a select group of customers but would love to work with you in the future. Please leave us a message and we'll be in touch!</p>
 <!--    			<h3>Email Us At</h6>
 	   			<p class="lead">
 	   				praxis@gmail.com<br>
@@ -435,13 +418,7 @@
 
    		<div class="row">  
 
-	      	<div class="col-five tab-full footer-about">       
 
-	            <h4 class="h05">praxis.</h4>
-
-	            <p>We are currently exploring and iterating in this space through the Stanford class, The Lean Launchpad. praxis is a work in progress and will likely change as we learn more.</p>	            
-
-		      </div> <!-- end footer-about -->
 
 <!-- 	      	<div class="col-three tab-full footer-social">
 
