fixed slow animation times

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 
    	<div class="row contact-content">
 
-   		<div class="col-seven tab-full animate-this">
+   		<div class="col-seven tab-full">
 
    			<h5>Send Us A Message</h5>
 
