added additional supporters

--- a/index.html
+++ b/index.html
@@ -303,26 +303,40 @@
          <div id="testimonial-slider" class="flex-slider animate-this">
 
             <ul class="slides">
-
+              <li>
+                <div class="img-class">
+                  <img src="images/supporters/bain_capital_ventures.png" alt="Bain Capital Ventures">
+                </div>
+              </li>
+              <li>
+                <div class="img-class">
+                  <img src="images/supporters/newvoices_fund.png" alt="New Voices Fund">
+                </div>
+              </li>
             	<li>
             		<div class="img-class">
-						<img src="images/supporters/startx.png" alt="startx">
-					</div>
-
+						      <img src="images/supporters/startx.png" alt="startx">
+					     </div>
             	</li>
+              <li>
+                <div class="img-class">
+                  <img src="images/supporters/vhil.png" alt="vhil">
+                </div>
+              </li>
+              <li>
+                <div class="img-class">
+                  <img src="images/supporters/clayman.png" alt="clayman">
+                </div>
+              </li>
+              <li>
+                <div class="img-class">
+                  <img src="images/supporters/rga.png" alt="rga">
+                </div>
+              </li>
+
             	<li>
             		<div class="img-class">
             			<img src="images/supporters/wbenc.png" alt="wbenc">
-            		</div>
-            	</li>
-            	<li>
-            		<div class="img-class">
-            			<img src="images/supporters/bain_capital_ventures.png" alt="Bain Capital Ventures">
-            		</div>
-            	</li>
-            	<li>
-            		<div class="img-class">
-            			<img src="images/supporters/cbe.png" alt="CBE">
             		</div>
             	</li>
             	<li>
@@ -335,11 +349,11 @@
             			<img src="images/supporters/impact_hub_oakland.png" alt="Impact Hub">
             		</div>
             	</li>
-            	<li>
-            		<div class="img-class">
-            			<img src="images/supporters/newvoices_fund.png" alt="New Voices Fund">
-            		</div>
-            	</li>
+              <li>
+                <div class="img-class">
+                  <img src="images/supporters/cbe.png" alt="CBE">
+                </div>
+              </li>
                <!-- <li>
 
                   <p>
