--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
               </li>
               <li>
                 <div class="img-class">
-                  <img src="images/supporters/rga.png" alt="rga">
+                  <img src="images/supporters/RGA.png" alt="rga">
                 </div>
               </li>
 
